; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-test.c___kasan_runtests.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-test.c___kasan_runtests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kasan_test = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__kasan_runtests(%struct.kasan_test* %0, i32 %1) #0 {
  %3 = alloca %struct.kasan_test*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.kasan_test* %0, %struct.kasan_test** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %14, %2
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %6
  %11 = load %struct.kasan_test*, %struct.kasan_test** %3, align 8
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @kasan_run_test(%struct.kasan_test* %11, i32 %12, i32 0)
  br label %14

14:                                               ; preds = %10
  %15 = load i32, i32* %5, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %5, align 4
  br label %6

17:                                               ; preds = %6
  ret void
}

declare dso_local i32 @kasan_run_test(%struct.kasan_test*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
